virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: nginx
  namespace: nginx
spec:
  hosts:
  - "nginx.example.com"
  gateways:
  - nginx/nginx
  http:
  - match:
    - uri:
       exact: /
    route:
    - destination:
        host: nginx
        port:
          number: 80
